<resources>
    <string name="app_name">Хочу помочь</string>
    <string name="appbar_text">Профиль</string>
    <string name="profile_text">Профиль</string>
    <string name="edit">Edit</string>
    <string name="profile_name">Константинов Денис</string>
    <string name="birth_date_text">Дата рождения</string>
    <string name="birth_date">01 февраля 1980</string>
    <string name="profession_hint_text">Сфера деятельности</string>
    <string name="profession_text">Хирургия, травматология</string>
    <string name="push">Получать push-уведомления</string>
    <string name="friends_hint_text">Ваши друзья</string>
    <string name="friend1_name">Дмитрий Валерьевич</string>
    <string name="friend2_name">Евгений Александров</string>
    <string name="friend3_name">Виктор Кузнецов</string>
    <string name="btn_text">Выйти из аккаунта</string>
    <string name="profile">Профиль</string>
    <string name="news">Новости</string>
    <string name="search">Поиск</string>
    <string name="history">История</string>
    <string name="help">Помочь</string>
    <string name="loading_text">Загрузка…</string>
    <string name="choose_photo_text">Выбрать фото</string>
    <string name="make_photo_text">Сделать снимок</string>
    <string name="delete_photo_tv">Удалить</string>
    <string name="help_text">Помочь</string>
    <string name="choose_help_category_text">Выберите категорию помощи</string>
    <string name="help_element_text">Дети</string>
    <string name="search_hint">Введите название организации</string>
    <string name="nko_key_words">Ключевые слова: мастер-класс, помощь Результаты поиска: 109 мероприятий</string>
    <string name="nko_placeholder_text">Благотворительный фонд Алины Кабаевой</string>
    <string name="search_empty_hint">Напишите в строке поиска название мероприятия или ключевые слова.</string>
    <string name="search_empty_example">Например,</string>
    <string name="search_empty_link_text"><u>мастер-класс, помощь</u></string>
    <string name="event_text">Спонсоры отремонтируют школу-интернат</string>
    <string name="event_detail_text">Дубовская школа-интернат для детей с ограниченными возможностями здоровья стала первой в области …</string>
    <string name="event_date_text">Осталось 13 дней (21.09 – 20.10)</string>
    <string name="news_toolbar_text">Новости</string>
    <string name="filter_text">Фильтр</string>
    <string name="help_categories_text">Категории помощи</string>
    <string name="detail_event_text">Благотворительный Фонд «Счастливый Мир»</string>
    <string name="event_detail_nav_text">Санкт-Петербург, Кирочная улица, д. 50А, каб. 208</string>
    <string name="event_detail_phone_text">+7 (937) 037 37-73 +7 (937) 016 16-16</string>
    <string name="event_detail_mail_text">У вас есть вопросы?</string>
    <string name="event_detail_mail_link_text"><u>Напишите нам</u></string>
    <string name="event_detail_abzac1_text">Участники и болельщики смогли весело и активно провести время на «Петербургском благотворительном марафоне» и при этом финансово поучаствовать в помощи детям.</string>
    <string name="event_detail_abzac2_text">При этом финансово поучаствовать в помощи детям. При этом финансово поучаствовать в помощи детям.</string>
    <string name="event_detail_site_link_text"><u>Перейти на сайт организаии</u></string>
    <string name="event_detail_subs_text">+102</string>
    <string name="clothes_text">Помочь вещами</string>
    <string name="volunteer_text">Стать волонтером</string>
    <string name="instrument_text">Проф. помощь</string>
    <string name="money_text">Помочь деньгами</string>
    <string name="auth_tv_text">Авторизация</string>
    <string name="auth_tv_social_text">Для участия в мероприятиях войдите в приложение через социальные сети</string>
    <string name="auth_tv_3_text">Или авторизуйтесь через приложение</string>
    <string name="auth_Email_hint">E-mail</string>
    <string name="auth_email_et_text">Введите e-mail</string>
    <string name="auth_pass_hint_text">Пароль</string>
    <string name="auth_pass_et_text">Введите пароль</string>
    <string name="auth_login_btn_text">Войти</string>
    <string name="auth_forgot_pass_text"><u>Забыли пароль?</u></string>
    <string name="auth_register_tv_text"><u>Регистрация</u></string>
    <string name="search_events_placeholder">Event1</string>
    <string name="unread_news_counter_text">1</string>
</resources>