<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/auth_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/auth_back_iv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/icon_back"
        app:layout_constraintBottom_toBottomOf="@+id/auth_toolbar"
        app:layout_constraintStart_toStartOf="@+id/auth_toolbar"
        app:layout_constraintTop_toTopOf="@+id/auth_toolbar" />

    <TextView
        android:id="@+id/auth_toolbar_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/officina_sans_extra_bold"
        android:text="@string/auth_tv_text"
        android:textColor="@color/white"
        android:textSize="21sp"
        app:layout_constraintBottom_toBottomOf="@+id/auth_toolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/auth_social_tv"
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/auth_tv_social_text"
        android:textAlignment="center"
        android:textColor="@color/black_70"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/auth_toolbar" />

    <ImageView
        android:id="@+id/auth_vk_iv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/vk"
        app:layout_constraintEnd_toStartOf="@+id/auth_fb_iv"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/auth_social_tv"
        app:layout_constraintHorizontal_bias="0.7"/>

    <ImageView
        android:id="@+id/auth_fb_iv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/fb"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/auth_social_tv" />

    <ImageView
        android:id="@+id/auth_ok_iv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/ok"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/auth_fb_iv"
        app:layout_constraintTop_toBottomOf="@+id/auth_social_tv"
        app:layout_constraintHorizontal_bias="0.3"/>

    <TextView
        android:id="@+id/auth_tv_3"
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:text="@string/auth_tv_3_text"
        android:textAlignment="center"
        android:textColor="@color/black_70"
        android:textSize="14sp"
        android:layout_marginTop="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/auth_fb_iv" />

    <TextView
        android:id="@+id/auth_email_hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="25dp"
        android:text="@string/auth_Email_hint"
        android:textColor="@color/black_38"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/auth_tv_3" />

    <EditText
        android:id="@+id/auth_email_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/auth_email_et_text"
        android:textColorHint="@color/black_38"
        android:layout_marginHorizontal="20dp"
        app:layout_constraintTop_toBottomOf="@+id/auth_email_hint"
        android:inputType="textEmailAddress"
        android:importantForAutofill="no"
        tools:ignore="LabelFor" />

    <TextView
        android:id="@+id/auth_pass_hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="25dp"
        android:text="@string/auth_pass_hint_text"
        android:textColor="@color/black_38"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/auth_email_et" />

    <EditText
        android:id="@+id/auth_pass_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:hint="@string/auth_pass_et_text"
        android:importantForAutofill="no"
        android:inputType="textVisiblePassword"
        android:textColorHint="@color/black_38"
        app:layout_constraintTop_toBottomOf="@+id/auth_pass_hint"
        tools:ignore="LabelFor"
        tools:layout_editor_absoluteX="20dp" />

    <ImageButton
        android:id="@+id/auth_pass_visible_ib"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@null"
        android:src="@drawable/open"
        android:layout_marginEnd="10dp"
        app:layout_constraintBottom_toBottomOf="@+id/auth_pass_et"
        app:layout_constraintEnd_toEndOf="@+id/auth_pass_et"
        app:layout_constraintTop_toTopOf="@+id/auth_pass_et"
        android:contentDescription="@string/app_name"
        android:importantForAccessibility="no" />

    <Button
        android:id="@+id/auth_login_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="40dp"
        android:text="@string/auth_login_btn_text"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:enabled="false"
        app:layout_constraintTop_toBottomOf="@+id/auth_pass_et"
        tools:layout_editor_absoluteX="20dp" />

    <TextView
        android:id="@+id/auth_forgot_pass_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/auth_forgot_pass_text"
        android:textSize="14sp"
        android:textColor="@color/leaf"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="@+id/auth_login_btn"
        app:layout_constraintTop_toBottomOf="@+id/auth_login_btn" />

    <TextView
        android:id="@+id/auth_register_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/auth_register_tv_text"
        android:textSize="14sp"
        android:textColor="@color/leaf"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="@id/auth_login_btn"
        app:layout_constraintTop_toBottomOf="@+id/auth_login_btn" />
</androidx.constraintlayout.widget.ConstraintLayout>