<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="310dp"
    android:layout_height="220dp"
    android:layout_gravity="center"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/upload_photo_iv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="29dp"
        android:layout_marginTop="36dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/upload"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/upload_photo_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/choose_photo_text"
        android:textColor="@color/black_87"
        android:textSize="22sp"
        android:layout_marginTop="31dp"
        android:layout_marginStart="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/upload_photo_iv"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_bias="0"/>

    <ImageView
        android:id="@+id/make_photo_iv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="29dp"
        android:layout_marginTop="36dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/camera"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/upload_photo_iv" />

    <TextView
        android:id="@+id/make_photo_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/make_photo_text"
        android:textColor="@color/black_87"
        android:textSize="22sp"
        android:layout_marginTop="31dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="68dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/make_photo_iv"
        app:layout_constraintTop_toBottomOf="@id/upload_photo_tv"
        app:layout_constraintHorizontal_bias="0"/>

    <ImageView
        android:id="@+id/delete_photo_iv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="29dp"
        android:layout_marginTop="36dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/delete"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/make_photo_iv" />

    <TextView
        android:id="@+id/delete_photo_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginBottom="28dp"
        android:layout_marginTop="31dp"
        android:text="@string/delete_photo_tv"
        android:textColor="@color/black_87"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintVertical_bias="0"
        app:layout_constraintStart_toEndOf="@id/delete_photo_iv"
        app:layout_constraintTop_toBottomOf="@id/make_photo_tv" />
</androidx.constraintlayout.widget.ConstraintLayout>