<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="344dp"
    android:layout_height="404dp"
    android:layout_gravity="center_horizontal"
    android:layout_marginBottom="8dp"
    android:background="@color/white">

    <ImageView
        android:id="@+id/event_iv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/news1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/fade_iv"
        android:layout_width="336dp"
        android:layout_height="wrap_content"
        android:contentDescription="@string/app_name"
        android:scaleType="centerCrop"
        android:src="@drawable/fade"
        app:layout_constraintBottom_toBottomOf="@+id/event_iv"
        app:layout_constraintEnd_toEndOf="@+id/event_iv"
        app:layout_constraintStart_toStartOf="@+id/event_iv"
        app:layout_constraintTop_toTopOf="@+id/event_iv" />

    <TextView
        android:id="@+id/event_title_tv"
        android:layout_width="267dp"
        android:layout_height="46dp"
        android:layout_marginTop="208dp"
        android:fontFamily="@font/officina_sans_extra_bold"
        android:text="@string/event_text"
        android:textAlignment="center"
        android:textColor="@color/blue_grey"
        android:textSize="21sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/event_iv" />

    <ImageView
        android:id="@+id/decor_iv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/decor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/event_title_tv" />

    <TextView
        android:id="@+id/event_detail_tv"
        android:layout_width="292dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/event_detail_text"
        android:textAlignment="center"
        android:textColor="@color/black_70"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/decor_iv" />

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="32dp"
        android:background="@color/turtle_green"
        android:text=""
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="5dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/icon_calendar"
        app:layout_constraintBottom_toBottomOf="@+id/view"
        app:layout_constraintEnd_toStartOf="@+id/event_date_tv"
        app:layout_constraintHorizontal_bias="1"
        app:layout_constraintStart_toStartOf="@+id/view"
        app:layout_constraintTop_toTopOf="@+id/view" />

    <TextView
        android:id="@+id/event_date_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/event_date_text"
        android:textColor="@color/white"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/view"
        app:layout_constraintTop_toTopOf="@+id/view" />
</androidx.constraintlayout.widget.ConstraintLayout>